--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>AgriNexus World</title>
+    <meta charset="UTF-8" />
+    <title>AgriNexus 통합 플랫폼</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-  <h1>AgriNexus World</h1>
-  <p><a href="login.html">로그인</a> 또는 <a href="register.html">회원가입</a></p>
+    <h1>🌱 AgriNexus World - 통합형 플랫폼</h1>
+    <ul>
+        <li><a href="contract.html">📄 계약서 자동 생성</a></li>
+        <li><a href="report.html">📊 IR/보고서 자동 생성</a></li>
+        <li><a href="logistics.html">🚚 물류비 비교 & 수출입 자동화</a></li>
+        <li><a href="edu.html">📚 AI 교육/학습 콘텐츠 생성</a></li>
+        <li><a href="admin.html">🛠 관리자 대시보드</a></li>
+    </ul>
 </body>
 </html>
