--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8" />
-    <title>AgriNexus 통합 플랫폼</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <title>AgriNexus Real SaaS Platform</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <h1>🌱 AgriNexus World - 통합형 플랫폼</h1>
+    <h1>🌍 AgriNexus 실사용 가능한 자동화 플랫폼</h1>
+    <p>당신의 스마트팜, 수출입, 계약, 교육, 제안서 자동화를 위한 올인원 SaaS</p>
     <ul>
-        <li><a href="contract.html">📄 계약서 자동 생성</a></li>
-        <li><a href="report.html">📊 IR/보고서 자동 생성</a></li>
-        <li><a href="logistics.html">🚚 물류비 비교 & 수출입 자동화</a></li>
-        <li><a href="edu.html">📚 AI 교육/학습 콘텐츠 생성</a></li>
-        <li><a href="admin.html">🛠 관리자 대시보드</a></li>
+        <li><a href="contract.html">📄 계약서 생성기</a></li>
+        <li><a href="report.html">📊 보고서 & IR 자동 생성</a></li>
+        <li><a href="logistics.html">🚚 글로벌 물류 & 수출입 자동화</a></li>
+        <li><a href="edu.html">📘 AI 교육 콘텐츠 생성</a></li>
+        <li><a href="admin.html">🛠 통합 관리자 대시보드</a></li>
     </ul>
 </body>
 </html>
