--- a/index.html
+++ b/index.html
@@ -1,17 +1,64 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus Real SaaS Platform</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AgriNexus World - 스마트 농업 자동화 플랫폼</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h1>🌍 AgriNexus 실사용 SaaS 플랫폼</h1>
-  <ul>
-    <li><a href="contract.html">📄 계약서 생성기</a></li>
-    <li><a href="report.html">📊 보고서 & IR 자동 생성</a></li>
-    <li><a href="edu.html">📘 AI 교육 콘텐츠 생성</a></li>
-  </ul>
+<body class="bg-white text-gray-900">
+  <header class="bg-green-700 text-white p-6 shadow-md">
+    <h1 class="text-3xl font-bold">🌿 AgriNexus World</h1>
+    <p class="text-sm mt-1">스마트 농업 · AI 자동화 · 미래 플랫폼</p>
+  </header>
+
+  <main class="p-6 max-w-4xl mx-auto space-y-10">
+
+    <section>
+      <h2 class="text-xl font-semibold mb-2">회사 소개</h2>
+      <p class="text-gray-700 leading-relaxed">
+        AgriNexus World는 전 세계 누구나 사용할 수 있는 스마트팜 자동화 플랫폼입니다.
+        우리는 사무실이 없지만, 플랫폼과 시스템으로 모든 걸 운영합니다.  
+        계약서, 보고서, 상담, 물류, 설계, 설치, 운영, 수익까지 모든 과정이 자동화됩니다.  
+        단 1인 운영으로도 글로벌 수준의 농업 비즈니스를 가능합니다.
+      </p>
+    </section>
+
+    <section>
+      <h2 class="text-xl font-semibold mb-2">플랫폼 철학</h2>
+      <p class="text-gray-700 mb-2">💬 Esse, non videri – 보이기보다 존재하라</p>
+      <ul class="list-disc pl-5 text-sm text-gray-800 space-y-1">
+        <li>겉치레 없이, 진짜로 작동하는 시스템을 만듭니다.</li>
+        <li>기술은 조용하게, 그러나 누구보다 강력하게 작동합니다.</li>
+        <li>누구나, 어디서든 클릭 한 번으로 농업 비즈니스를 시작할 수 있게 합니다.</li>
+        <li>1인 기업도 세계 최고가 될 수 있다는 믿음을 실현합니다.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2 class="text-xl font-semibold mb-2">주요 기능 안내</h2>
+      <ul class="list-disc pl-5 text-sm text-gray-800 space-y-1">
+        <li>✅ 계약서 자동 생성 및 PDF 다운로드</li>
+        <li>✅ 보고서 자동 생성 + 이메일 전송</li>
+        <li>✅ 관리자 대시보드로 수익/추천 실시간 확인</li>
+        <li>✅ AI 챗봇으로 24시간 사용자 상담</li>
+        <li>✅ 글로벌 다국어 자동 번역 + PWA 앱 설치 지원</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2 class="text-xl font-semibold mb-2">플랫폼을 만든 이유</h2>
+      <p class="text-gray-700 text-sm leading-relaxed">
+        저희는 전문가가 아닙니다. 그저 "정말 만들고 싶어서" 시작했습니다.  
+        누구도 도와주지 않았고, 누구도 가르쳐주지 않았지만  
+        정말로 세계 어디서든 사용 가능한 자동화 플랫폼을 혼자서 만들어냈습니다.  
+        이제 이 플랫폼이 누구에게나, 어디서나, 실질적인 도움과 기회를 주기를 바랍니다.
+      </p>
+    </section>
+  </main>
+
+  <footer class="bg-gray-100 text-center text-xs py-4 mt-10 text-gray-500">
+    © 2025 AgriNexus World | 모든 권리 보유
+  </footer>
 </body>
 </html>
