--- a/index.html
+++ b/index.html
@@ -7,19 +7,29 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-900">
-  <header class="bg-green-700 text-white p-6 shadow-md">
-    <h1 class="text-3xl font-bold">🌿 AgriNexus World</h1>
-    <p class="text-sm mt-1">스마트 농업 · AI 자동화 · 미래 플랫폼</p>
-  </header>
 
+  <!-- ✅ 네비게이션 메뉴바 -->
+  <nav class="bg-green-800 text-white px-6 py-3 shadow flex flex-wrap items-center justify-between">
+    <div class="text-lg font-bold">🌿 AgriNexus World</div>
+    <ul class="flex flex-wrap gap-4 text-sm">
+      <li><a href="index.html" class="hover:underline">🏁 메인</a></li>
+      <li><a href="contract.html" class="hover:underline">📄 계약 생성</a></li>
+      <li><a href="report.html" class="hover:underline">📑 보고서</a></li>
+      <li><a href="login.html" class="hover:underline">🔐 관리자</a></li>
+      <li><a href="#" onclick="toggleChat()" class="hover:underline">💬 AI 상담</a></li>
+      <li><a href="#" class="hover:underline">💰 추천 리워드</a></li>
+      <li><a href="index.html#about" class="hover:underline">🏢 회사 소개</a></li>
+    </ul>
+  </nav>
+
+  <!-- 메인 콘텐츠 -->
   <main class="p-6 max-w-4xl mx-auto space-y-10">
-
-    <section>
+    <section id="about">
       <h2 class="text-xl font-semibold mb-2">회사 소개</h2>
       <p class="text-gray-700 leading-relaxed">
         AgriNexus World는 전 세계 누구나 사용할 수 있는 스마트팜 자동화 플랫폼입니다.
         우리는 사무실이 없지만, 플랫폼과 시스템으로 모든 걸 운영합니다.  
-        계약서, 보고서, 상담, 물류, 설계, 설치, 운영, 수익까지 모든 과정이 자동화됩니다.  
+        계약서, 보고서, 상담, 설계, 운영, 수익까지 모든 과정이 자동화됩니다.  
         단 1인 운영으로도 글로벌 수준의 농업 비즈니스를 가능합니다.
       </p>
     </section>
@@ -34,28 +44,14 @@
         <li>1인 기업도 세계 최고가 될 수 있다는 믿음을 실현합니다.</li>
       </ul>
     </section>
-
-    <section>
-      <h2 class="text-xl font-semibold mb-2">주요 기능 안내</h2>
-      <ul class="list-disc pl-5 text-sm text-gray-800 space-y-1">
-        <li>✅ 계약서 자동 생성 및 PDF 다운로드</li>
-        <li>✅ 보고서 자동 생성 + 이메일 전송</li>
-        <li>✅ 관리자 대시보드로 수익/추천 실시간 확인</li>
-        <li>✅ AI 챗봇으로 24시간 사용자 상담</li>
-        <li>✅ 글로벌 다국어 자동 번역 + PWA 앱 설치 지원</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2 class="text-xl font-semibold mb-2">플랫폼을 만든 이유</h2>
-      <p class="text-gray-700 text-sm leading-relaxed">
-        저희는 전문가가 아닙니다. 그저 "정말 만들고 싶어서" 시작했습니다.  
-        누구도 도와주지 않았고, 누구도 가르쳐주지 않았지만  
-        정말로 세계 어디서든 사용 가능한 자동화 플랫폼을 혼자서 만들어냈습니다.  
-        이제 이 플랫폼이 누구에게나, 어디서나, 실질적인 도움과 기회를 주기를 바랍니다.
-      </p>
-    </section>
   </main>
+
+  <!-- GPT 챗봇 (간이 연결용 예시) -->
+  <script>
+    function toggleChat() {
+      alert('💬 GPT 챗봇 기능은 Netlify 연결 시 iframe 또는 위젯으로 연동됩니다.');
+    }
+  </script>
 
   <footer class="bg-gray-100 text-center text-xs py-4 mt-10 text-gray-500">
     © 2025 AgriNexus World | 모든 권리 보유
