--- a/index.html
+++ b/index.html
@@ -2,76 +2,84 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AgriNexus World - 스마트 농업 자동화 플랫폼</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AgriNexus World</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-900">
-  <header class="bg-green-700 text-white p-5 shadow-md">
-    <div class="text-2xl font-bold">🌿 AgriNexus World</div>
+
+  <!-- 상단 메뉴바 (Stripe + Framer 스타일) -->
+  <header class="bg-white shadow sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+      <h1 class="text-xl font-bold text-green-700">🌿 AgriNexus World</h1>
+      <nav class="space-x-4 text-sm font-medium">
+        <a href="index.html" class="hover:text-green-600">🏁 메인</a>
+        <a href="contract.html" class="hover:text-green-600">📄 계약 생성</a>
+        <a href="report.html" class="hover:text-green-600">📑 보고서</a>
+        <a href="login.html" class="hover:text-green-600">🔐 관리자</a>
+        <a href="#" onclick="alert('GPT 챗봇은 추후 연결됩니다');" class="hover:text-green-600">💬 AI 상담</a>
+        <a href="#about" class="hover:text-green-600">🏢 회사 소개</a>
+      </nav>
+    </div>
   </header>
 
-  <section class="max-w-4xl mx-auto p-6 space-y-10">
-    <div>
-      <h2 class="text-2xl font-bold mb-3">🌱 AgriNexus World는 왜 특별한가요?</h2>
-      <p class="text-gray-800 leading-relaxed text-lg">
-        AgriNexus World는 전 세계 어디서든 누구나 클릭 한 번으로  
-        <strong>스마트팜을 설계하고 계약하고 수익을 창출할 수 있는 자동화 플랫폼</strong>입니다.  
-        복잡한 기술은 보이지 않도록 숨기고,  
-        사용자에겐 <strong>가장 직관적인 경험</strong>만을 남깁니다.  
-        계약서, 보고서, 설계, 물류, 운영까지  
-        모든 것이 하나의 흐름으로 연결되고 자동화됩니다.
-      </p>
-    </div>
+  <!-- 메인 소개 -->
+  <main class="max-w-5xl mx-auto px-6 py-10">
+    <section class="text-center mb-12">
+      <h2 class="text-2xl font-bold mb-2">🌱 농업의 미래를 클릭 한 번으로</h2>
+      <p class="text-gray-700 text-lg">계약부터 수익까지, 누구나 시작할 수 있는 스마트팜 자동화 플랫폼</p>
+    </section>
 
-    <div>
-      <h2 class="text-xl font-semibold mt-8 mb-2">💬 플랫폼 철학</h2>
-      <p class="text-md font-medium text-gray-700 mb-2">💭 Esse, non videri – 보이기보다 존재하라</p>
-      <ul class="list-disc pl-5 space-y-1 text-gray-800 text-base">
-        <li>겉치레 없이, 진짜로 작동하는 시스템을 만듭니다.</li>
-        <li>복잡함은 숨기고, 결과만 보여줍니다.</li>
-        <li>기술은 조용하게, 그러나 누구보다 강력하게 작동합니다.</li>
-        <li>누구든 직관적으로 농업을 시작하고 수익을 창출할 수 있어야 합니다.</li>
-      </ul>
-    </div>
+    <!-- 카드형 기능 버튼 (Linear + Toss 스타일) -->
+    <section class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-16">
+      <a href="contract.html" class="bg-green-50 border border-green-200 p-6 rounded shadow hover:shadow-md transition">
+        <h3 class="text-lg font-semibold text-green-700 mb-2">📄 계약서 생성</h3>
+        <p class="text-sm text-gray-700">전자서명 포함된 계약서를 자동으로 작성하고 저장하세요.</p>
+      </a>
+      <a href="report.html" class="bg-green-50 border border-green-200 p-6 rounded shadow hover:shadow-md transition">
+        <h3 class="text-lg font-semibold text-green-700 mb-2">📑 보고서 만들기</h3>
+        <p class="text-sm text-gray-700">입력한 내용으로 자동 PDF 보고서를 생성할 수 있습니다.</p>
+      </a>
+      <a href="login.html" class="bg-green-50 border border-green-200 p-6 rounded shadow hover:shadow-md transition">
+        <h3 class="text-lg font-semibold text-green-700 mb-2">🔐 관리자 페이지</h3>
+        <p class="text-sm text-gray-700">운영 통계, 수익, 추천 데이터를 확인하고 관리할 수 있습니다.</p>
+      </a>
+    </section>
 
-    <div>
-      <h2 class="text-xl font-semibold mt-8 mb-2">🌟 핵심 가치 키워드</h2>
-      <table class="w-full table-auto text-sm text-left border border-gray-300">
-        <thead class="bg-gray-100">
-          <tr>
-            <th class="border px-4 py-2">가치</th>
-            <th class="border px-4 py-2">설명</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="border px-4 py-2 font-semibold">신뢰</td>
-            <td class="border px-4 py-2">사용자/투자자/파트너 모두에게 약속된 기능과 결과를 제공합니다.</td>
-          </tr>
-          <tr>
-            <td class="border px-4 py-2 font-semibold">자동화</td>
-            <td class="border px-4 py-2">누구나 전문가처럼 운영할 수 있도록 모든 시스템을 자동화합니다.</td>
-          </tr>
-          <tr>
-            <td class="border px-4 py-2 font-semibold">확장성</td>
-            <td class="border px-4 py-2">한국 → 아시아 → 글로벌 확장까지 모든 시스템이 준비되어 있습니다.</td>
-          </tr>
-          <tr>
-            <td class="border px-4 py-2 font-semibold">투명성</td>
-            <td class="border px-4 py-2">수익, 계약, 운영 흐름 전부 실시간으로 공개됩니다.</td>
-          </tr>
-          <tr>
-            <td class="border px-4 py-2 font-semibold">지속가능성</td>
-            <td class="border px-4 py-2">농업과 기술의 융합을 통해 기후위기, 식량위기에 대응합니다.</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </section>
+    <!-- 회사 소개 및 철학 (MOHAET 스타일) -->
+    <section id="about" class="space-y-8">
+      <div>
+        <h2 class="text-xl font-bold">🏢 회사 소개</h2>
+        <p class="text-gray-800 text-base mt-2">
+          AgriNexus World는 누구나 클릭 한 번으로 스마트팜을 설계하고 운영할 수 있는 전자동화 플랫폼입니다.
+          복잡한 기술을 감추고, 결과 중심의 사용자 경험을 제공합니다.
+        </p>
+      </div>
 
-  <footer class="bg-gray-100 text-center text-xs py-4 mt-10 text-gray-500">
+      <div>
+        <h2 class="text-xl font-bold">💬 플랫폼 철학</h2>
+        <ul class="list-disc pl-5 mt-2 text-gray-800 text-base space-y-1">
+          <li>Esse, non videri – 보이기보다 존재하라</li>
+          <li>겉치레 없이 진짜로 작동하는 시스템</li>
+          <li>클릭 한 번으로 농업 비즈니스 시작</li>
+        </ul>
+      </div>
+
+      <div>
+        <h2 class="text-xl font-bold">🌟 핵심 가치 키워드</h2>
+        <div class="mt-2 text-sm text-gray-700">
+          <p><strong>신뢰:</strong> 약속된 기능과 결과를 제공합니다</p>
+          <p><strong>자동화:</strong> 전문가처럼 운영 가능한 자동 시스템</p>
+          <p><strong>확장성:</strong> 한국 → 글로벌로 확장 가능</p>
+          <p><strong>투명성:</strong> 수익과 계약 흐름을 실시간 공개</p>
+          <p><strong>지속가능성:</strong> 기후위기 대응형 스마트 농업</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="text-center text-xs py-6 text-gray-500 border-t mt-10">
     © 2025 AgriNexus World | 모든 권리 보유
   </footer>
 </body>
