--- a/index.html
+++ b/index.html
@@ -4,32 +4,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AgriNexus World - 소개</title>
+  <title>AgriNexus World - About</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-white text-gray-900">
+<body class="bg-gray-50 text-gray-900">
 
-  <header class="bg-green-700 text-white p-5 shadow-md">
-    <div class="text-2xl font-bold">🌿 AgriNexus World</div>
-  </header>
+  <main class="max-w-6xl mx-auto px-6 py-12 space-y-12">
 
-  <section class="max-w-5xl mx-auto px-6 py-12 space-y-12">
-
-    <!-- 회사 소개 -->
-    <div>
-      <h2 class="text-2xl font-bold mb-4">🏢 회사 소개</h2>
-      <p class="text-gray-800 text-lg leading-relaxed">
+    <!-- 회사 소개 카드 -->
+    <div class="bg-white rounded-xl shadow-md border p-6 hover:shadow-lg transition">
+      <h2 class="text-xl font-bold flex items-center gap-2 mb-2">🏢 회사 소개</h2>
+      <p class="text-gray-800 text-base leading-relaxed">
         <strong>AgriNexus World</strong>는 누구나 클릭 한 번으로 스마트팜을 설계하고, 계약하고, 운영할 수 있도록  
         전 과정을 자동화한 미래형 플랫폼입니다.  
-        우리는 복잡한 기술을 감추고, <strong>결과 중심의 사용자 경험</strong>을 제공합니다.  
+        복잡한 기술을 감추고, <strong>결과 중심의 사용자 경험</strong>을 제공합니다.  
         디지털 계약, 보고서 자동화, 실시간 추천 분석, 수익 추적까지  
         <strong>모든 기능을 하나의 흐름으로 연결한 글로벌 농업 비즈니스 허브</strong>입니다.
       </p>
     </div>
 
-    <!-- 플랫폼 철학 -->
-    <div>
-      <h2 class="text-2xl font-bold mb-4">💬 플랫폼 철학</h2>
+    <!-- 플랫폼 철학 카드 -->
+    <div class="bg-white rounded-xl shadow-md border p-6 hover:shadow-lg transition">
+      <h2 class="text-xl font-bold flex items-center gap-2 mb-2">💬 플랫폼 철학</h2>
       <ul class="list-disc pl-6 space-y-2 text-gray-700 text-base">
         <li><strong>Esse, non videri</strong> – 보이기보다 존재하라</li>
         <li>겉치레 없는 진짜 기술, 실제로 작동하는 자동화 시스템</li>
@@ -38,9 +34,9 @@
       </ul>
     </div>
 
-    <!-- 핵심 가치 키워드 -->
-    <div>
-      <h2 class="text-2xl font-bold mb-4">🌟 핵심 가치 키워드</h2>
+    <!-- 핵심 가치 키워드 카드 -->
+    <div class="bg-white rounded-xl shadow-md border p-6 hover:shadow-lg transition">
+      <h2 class="text-xl font-bold flex items-center gap-2 mb-4">🌟 핵심 가치 키워드</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-base text-gray-800">
         <div>
           <p><strong>🔐 신뢰:</strong> 약속된 기능과 결과를 제공합니다.</p>
@@ -54,7 +50,7 @@
       </div>
     </div>
 
-  </section>
+  </main>
 
   <footer class="text-center text-xs py-6 text-gray-500 border-t mt-10">
     © 2025 AgriNexus World | 모든 권리 보유
