--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AgriNexus World - About</title>
+  <title>AgriNexus World - About Styled</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-900">
+<body class="bg-gray-50 text-gray-900 font-sans">
 
   <main class="max-w-6xl mx-auto px-6 py-12 space-y-12">
 
     <!-- 회사 소개 카드 -->
-    <div class="bg-white rounded-xl shadow-md border p-6 hover:shadow-lg transition">
-      <h2 class="text-xl font-bold flex items-center gap-2 mb-2">🏢 회사 소개</h2>
-      <p class="text-gray-800 text-base leading-relaxed">
-        <strong>AgriNexus World</strong>는 누구나 클릭 한 번으로 스마트팜을 설계하고, 계약하고, 운영할 수 있도록  
+    <div class="bg-white rounded-xl shadow-md border p-8 hover:shadow-lg transition">
+      <h2 class="text-2xl lg:text-3xl font-bold text-gray-900 mb-4">🏢 회사 소개</h2>
+      <p class="text-base lg:text-lg leading-relaxed text-gray-800">
+        <strong class="text-green-700">AgriNexus World</strong>는 누구나 클릭 한 번으로 스마트팜을 설계하고, 계약하고, 운영할 수 있도록  
         전 과정을 자동화한 미래형 플랫폼입니다.  
-        복잡한 기술을 감추고, <strong>결과 중심의 사용자 경험</strong>을 제공합니다.  
+        복잡한 기술을 감추고, <strong class="text-green-700">결과 중심의 사용자 경험</strong>을 제공합니다.  
         디지털 계약, 보고서 자동화, 실시간 추천 분석, 수익 추적까지  
-        <strong>모든 기능을 하나의 흐름으로 연결한 글로벌 농업 비즈니스 허브</strong>입니다.
+        <strong class="font-semibold">모든 기능을 하나의 흐름으로 연결한 글로벌 농업 비즈니스 허브</strong>입니다.
       </p>
     </div>
 
     <!-- 플랫폼 철학 카드 -->
-    <div class="bg-white rounded-xl shadow-md border p-6 hover:shadow-lg transition">
-      <h2 class="text-xl font-bold flex items-center gap-2 mb-2">💬 플랫폼 철학</h2>
-      <ul class="list-disc pl-6 space-y-2 text-gray-700 text-base">
+    <div class="bg-white rounded-xl shadow-md border p-8 hover:shadow-lg transition">
+      <h2 class="text-2xl lg:text-3xl font-bold text-gray-900 mb-4">💬 플랫폼 철학</h2>
+      <ul class="list-disc pl-6 space-y-3 text-base lg:text-lg text-gray-700">
         <li><strong>Esse, non videri</strong> – 보이기보다 존재하라</li>
         <li>겉치레 없는 진짜 기술, 실제로 작동하는 자동화 시스템</li>
         <li>누구든 클릭 한 번으로 농업 비즈니스를 시작할 수 있어야 한다</li>
@@ -35,15 +35,15 @@
     </div>
 
     <!-- 핵심 가치 키워드 카드 -->
-    <div class="bg-white rounded-xl shadow-md border p-6 hover:shadow-lg transition">
-      <h2 class="text-xl font-bold flex items-center gap-2 mb-4">🌟 핵심 가치 키워드</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-base text-gray-800">
-        <div>
+    <div class="bg-white rounded-xl shadow-md border p-8 hover:shadow-lg transition">
+      <h2 class="text-2xl lg:text-3xl font-bold text-gray-900 mb-6">🌟 핵심 가치 키워드</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-base lg:text-lg text-gray-800">
+        <div class="space-y-2">
           <p><strong>🔐 신뢰:</strong> 약속된 기능과 결과를 제공합니다.</p>
           <p><strong>⚙️ 자동화:</strong> 누구나 전문가처럼 운영 가능한 구조입니다.</p>
           <p><strong>🌐 확장성:</strong> 한국 → 아시아 → 전 세계로 연결 가능한 구조입니다.</p>
         </div>
-        <div>
+        <div class="space-y-2">
           <p><strong>📊 투명성:</strong> 수익, 계약, 활동 로그 전부 실시간 공개됩니다.</p>
           <p><strong>🌱 지속가능성:</strong> 기후 위기에 대응하는 스마트 농업의 미래를 설계합니다.</p>
         </div>
