--- a/index.html
+++ b/index.html
@@ -2,58 +2,50 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AgriNexus World - About Styled</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AgriNexus World - 스마트팜 통합 플랫폼</title>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      font-family: 'Noto Sans KR', sans-serif;
+    }
+  </style>
 </head>
-<body class="bg-gray-50 text-gray-900 font-sans">
+<body class="bg-gray-50 text-gray-900">
+
+  <header class="bg-green-700 text-white p-5 shadow-md">
+    <div class="text-2xl font-bold">🌿 AgriNexus World</div>
+    <p class="text-sm text-green-200">AI 기반 스마트팜·물류·계약·국가정보 자동화 플랫폼</p>
+  </header>
 
   <main class="max-w-6xl mx-auto px-6 py-12 space-y-12">
 
-    <!-- 회사 소개 카드 -->
-    <div class="bg-white rounded-xl shadow-md border p-8 hover:shadow-lg transition">
-      <h2 class="text-2xl lg:text-3xl font-bold text-gray-900 mb-4">🏢 회사 소개</h2>
-      <p class="text-base lg:text-lg leading-relaxed text-gray-800">
-        <strong class="text-green-700">AgriNexus World</strong>는 누구나 클릭 한 번으로 스마트팜을 설계하고, 계약하고, 운영할 수 있도록  
-        전 과정을 자동화한 미래형 플랫폼입니다.  
-        복잡한 기술을 감추고, <strong class="text-green-700">결과 중심의 사용자 경험</strong>을 제공합니다.  
-        디지털 계약, 보고서 자동화, 실시간 추천 분석, 수익 추적까지  
-        <strong class="font-semibold">모든 기능을 하나의 흐름으로 연결한 글로벌 농업 비즈니스 허브</strong>입니다.
-      </p>
-    </div>
-
-    <!-- 플랫폼 철학 카드 -->
-    <div class="bg-white rounded-xl shadow-md border p-8 hover:shadow-lg transition">
-      <h2 class="text-2xl lg:text-3xl font-bold text-gray-900 mb-4">💬 플랫폼 철학</h2>
-      <ul class="list-disc pl-6 space-y-3 text-base lg:text-lg text-gray-700">
-        <li><strong>Esse, non videri</strong> – 보이기보다 존재하라</li>
-        <li>겉치레 없는 진짜 기술, 실제로 작동하는 자동화 시스템</li>
-        <li>누구든 클릭 한 번으로 농업 비즈니스를 시작할 수 있어야 한다</li>
-        <li>모든 사용자가 전문가처럼 실행할 수 있는 구조를 만든다</li>
+    <section class="bg-white rounded-xl shadow-md border p-6">
+      <h2 class="text-2xl font-bold text-green-700 mb-4">🚀 통합 기능 안내</h2>
+      <ul class="list-disc pl-6 text-base leading-relaxed text-gray-800 space-y-1">
+        <li>📄 <strong>계약서 자동 생성기</strong> – 계약 내용 입력 → 전자서명 포함 PDF 출력</li>
+        <li>📑 <strong>보고서 자동 생성기</strong> – 입력 요약 → PDF 보고서 변환</li>
+        <li>🔐 <strong>관리자 로그인 시스템</strong> – 로그인 후 수익 및 추천 분석 가능</li>
+        <li>🧠 <strong>스마트팜 AI 통합 설계 생성기</strong> – 환경에 맞는 농장 구조 자동 설계</li>
+        <li>🚚 <strong>AI 물류 통합 생성기</strong> – 생산지~도착지 자동 매핑 물류 경로 생성</li>
+        <li>📊 <strong>국가별 정보 생성기</strong> – 정책, 환경, 기후, 수출입 등 실시간 요약</li>
+        <li>🌱 <strong>국가별 종자 정보 서비스 생성기</strong> – 나라별 재배 가능 작물 및 기간 제공</li>
+        <li>💬 <strong>AI 챗봇 생성기</strong> – GPT 응답 기반 스마트 고객 응대</li>
+        <li>🔗 <strong>OpenAI API 연동 생성기</strong> – 입력값 기반 실시간 텍스트 자동화</li>
       </ul>
-    </div>
+    </section>
 
-    <!-- 핵심 가치 키워드 카드 -->
-    <div class="bg-white rounded-xl shadow-md border p-8 hover:shadow-lg transition">
-      <h2 class="text-2xl lg:text-3xl font-bold text-gray-900 mb-6">🌟 핵심 가치 키워드</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-base lg:text-lg text-gray-800">
-        <div class="space-y-2">
-          <p><strong>🔐 신뢰:</strong> 약속된 기능과 결과를 제공합니다.</p>
-          <p><strong>⚙️ 자동화:</strong> 누구나 전문가처럼 운영 가능한 구조입니다.</p>
-          <p><strong>🌐 확장성:</strong> 한국 → 아시아 → 전 세계로 연결 가능한 구조입니다.</p>
-        </div>
-        <div class="space-y-2">
-          <p><strong>📊 투명성:</strong> 수익, 계약, 활동 로그 전부 실시간 공개됩니다.</p>
-          <p><strong>🌱 지속가능성:</strong> 기후 위기에 대응하는 스마트 농업의 미래를 설계합니다.</p>
-        </div>
-      </div>
-    </div>
+    <section class="bg-white rounded-xl shadow-md border p-6">
+      <h2 class="text-xl font-semibold text-gray-800 mb-2">📦 전체 기능은 클릭 한 번으로 연결됩니다.</h2>
+      <p class="text-gray-600 text-sm">각 기능은 HTML 내 포함되어 있으며, GitHub 또는 Netlify에 배포하여 실시간 서비스 가능</p>
+    </section>
 
   </main>
 
   <footer class="text-center text-xs py-6 text-gray-500 border-t mt-10">
-    © 2025 AgriNexus World | 모든 권리 보유
+    © 2025 AgriNexus World | 전세계 스마트 농업 자동화 시스템
   </footer>
 
 </body>
