--- a/ai.html
+++ b/ai.html
@@ -1,34 +1,1 @@
-
-    <h1>🤖 GPT AI 오퍼레이터</h1>
-    <input type="password" id="api-key" placeholder="🔐 OpenAI API Key 입력"><br/>
-    <textarea id="gpt-input" placeholder="GPT에게 명령을 입력하세요" style="width:100%; height:100px;"></textarea>
-    <button onclick="askGPT()">GPT 실행</button>
-    <div id="gpt-output" style="margin-top:20px;"></div>
-    <script>
-    async function askGPT() {
-        const input = document.getElementById("gpt-input").value;
-        const apiKey = document.getElementById("api-key").value;
-        const output = document.getElementById("gpt-output");
-        if (!apiKey) return output.innerHTML = "❗ API Key를 입력해주세요.";
-        output.innerHTML = "GPT 응답 생성 중...";
-        try {
-            const response = await fetch("https://api.openai.com/v1/chat/completions", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                    "Authorization": "Bearer " + apiKey
-                },
-                body: JSON.stringify({
-                    model: "gpt-4o",
-                    messages: [{ role: "user", content: input }],
-                    temperature: 0.7
-                })
-            });
-            const data = await response.json();
-            output.innerHTML = data.choices?.[0]?.message?.content || "❌ 응답 오류 발생";
-        } catch (e) {
-            output.innerHTML = "❌ 네트워크 오류 또는 API 오류";
-        }
-    }
-    </script>
-    
+<!DOCTYPE html><html><body><h1>🤖 OpenAI 기반 자동 생성기</h1></body></html>
