--- a/index.html
+++ b/index.html
@@ -1,46 +1,14 @@
 
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AgriNexus World - 통합 플랫폼</title>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style> body { font-family: 'Noto Sans KR', sans-serif; } </style>
-</head>
-<body class="bg-white text-gray-900">
-
-  <header class="sticky top-0 bg-white shadow border-b z-50">
-    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <div class="text-xl font-bold text-green-700">🌿 AgriNexus World</div>
-      <nav class="space-x-4 text-sm font-medium">
-        <a href="index.html" class="hover:text-green-600">홈</a>
-        <a href="contract.html" class="hover:text-green-600">계약</a>
-        <a href="report.html" class="hover:text-green-600">보고서</a>
-        <a href="logistics.html" class="hover:text-green-600">물류</a>
-        <a href="price.html" class="hover:text-green-600">가격 수집</a>
-        <a href="tracking.html" class="hover:text-green-600">실시간 추적</a>
-        <a href="ai.html" class="hover:text-green-600">OpenAI</a>
-        <a href="notify.html" class="hover:text-green-600">알림 시스템</a>
-      </nav>
-    </div>
-  </header>
-
-  <main class="max-w-6xl mx-auto px-6 py-12">
-    <h1 class="text-2xl font-bold mb-6">AgriNexus World - 통합 자동화 플랫폼</h1>
-    <ul class="list-disc pl-6 space-y-2 text-gray-800">
-      <li>✅ 계약 생성 / 보고서 생성 / 관리자 로그인</li>
-      <li>✅ 스마트 물류 시스템 (CJ벤치마크 기반)</li>
-      <li>✅ 전세계 농산물 실시간 가격 수집 시스템</li>
-      <li>✅ 지도 기반 실시간 물류 추적 시스템</li>
-      <li>✅ OpenAI GPT 연동 자동 생성기</li>
-      <li>✅ 사용자 이벤트 기반 알림 시스템 (Notiplay형)</li>
-    </ul>
-  </main>
-
-  <footer class="text-center text-xs py-6 text-gray-500 border-t mt-12">
-    © 2025 AgriNexus World | All Rights Reserved
-  </footer>
-</body>
-</html>
+<!DOCTYPE html><html><body>
+<h1>🌿 AgriNexus World</h1>
+<ul>
+  <li><a href="contract.html">계약 생성기</a></li>
+  <li><a href="report.html">보고서 생성기</a></li>
+  <li><a href="logistics.html">물류 자동 생성기</a></li>
+  <li><a href="price.html">가격 수집기</a></li>
+  <li><a href="tracking.html">실시간 물류 추적</a></li>
+  <li><a href="ai.html">OpenAI 생성기</a></li>
+  <li><a href="notify.html">알림 시스템</a></li>
+  <li><a href="diagram.html">자동화 흐름 다이어그램</a></li>
+</ul>
+</body></html>
