--- a/logistics.html
+++ b/logistics.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><body><h1>📦 스마트 물류 자동 생성기 - CJ 벤치마크 시스템</h1></body></html>
+
+<!DOCTYPE html><html><body>
+<h1>📦 물류 자동 생성기</h1>
+<form>
+  출발지: <input type="text" name="from"><br>
+  도착지: <input type="text" name="to"><br>
+  <button type="submit">물류 경로 생성</button>
+</form>
+</body></html>
