--- a/tracking.html
+++ b/tracking.html
@@ -1,1 +1,8 @@
-<!DOCTYPE html><html><body><h1>🗺️ 지도 기반 실시간 물류 추적 시스템</h1></body></html>
+
+<!DOCTYPE html><html><body>
+<h1>🗺️ 실시간 추적</h1>
+<form>
+  트래킹 번호: <input type="text" name="tracking"><br>
+  <button type="submit">위치 추적</button>
+</form>
+</body></html>
