--- a/ai.html
+++ b/ai.html
@@ -1,1 +1,8 @@
-<!DOCTYPE html><html><body><h1>🤖 OpenAI 기반 자동 생성기</h1></body></html>
+
+<!DOCTYPE html><html><body>
+<h1>🤖 OpenAI 자동 생성기</h1>
+<form>
+  프롬프트 입력: <input type="text" name="prompt"><br>
+  <button type="submit">AI 응답 생성</button>
+</form>
+</body></html>
