--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
 <ul>
   <li><a href="contract.html">계약 생성기</a></li>
   <li><a href="report.html">보고서 생성기</a></li>
-  <li><a href="logistics.html">물류 자동 생성기</a></li>
-  <li><a href="price.html">가격 수집기</a></li>
-  <li><a href="tracking.html">실시간 물류 추적</a></li>
-  <li><a href="ai.html">OpenAI 생성기</a></li>
-  <li><a href="notify.html">알림 시스템</a></li>
-  <li><a href="diagram.html">자동화 흐름 다이어그램</a></li>
+  <li><a href="ai.html">OpenAI 자동 생성기</a></li>
 </ul>
 </body></html>
