--- a/contract.html
+++ b/contract.html
@@ -8,12 +8,11 @@
 </form>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script>
-  async function generateContract() {
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
-    doc.text(`계약자: ${document.getElementById("name").value}`, 10, 10);
-    doc.text(`내용: ${document.getElementById("content").value}`, 10, 20);
-    doc.save("contract.pdf");
-  }
-</script>
-</body></html>
+async function generateContract() {
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF();
+  doc.text(`계약자: ${document.getElementById("name").value}`, 10, 10);
+  doc.text(`내용: ${document.getElementById("content").value}`, 10, 20);
+  doc.save("contract.pdf");
+}
+</script></body></html>
