--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 
-<!DOCTYPE html><html><body>
-<h1>🌿 AgriNexus World</h1>
+<!DOCTYPE html><html lang="ko"><head>
+  <meta charset="UTF-8"><title>AgriNexus World</title>
+</head><body>
+<h1>🌿 AgriNexus World - 전체 기능 플랫폼</h1>
 <ul>
   <li><a href="contract.html">계약 생성기</a></li>
   <li><a href="report.html">보고서 생성기</a></li>
-  <li><a href="ai.html">OpenAI 자동 생성기</a></li>
+  <li><a href="ai.html">OpenAI 생성기</a></li>
+  <li><a href="logistics.html">스마트 물류</a></li>
+  <li><a href="price.html">농산물 가격 수집</a></li>
+  <li><a href="tracking.html">실시간 추적</a></li>
+  <li><a href="notify.html">알림 시스템</a></li>
 </ul>
 </body></html>
