--- a/logistics.html
+++ b/logistics.html
@@ -1,9 +1,9 @@
 
 <!DOCTYPE html><html><body>
 <h1>📦 물류 자동 생성기</h1>
-<form>
-  출발지: <input type="text" name="from"><br>
-  도착지: <input type="text" name="to"><br>
-  <button type="submit">물류 경로 생성</button>
+<form onsubmit="event.preventDefault(); alert('물류 경로 자동 생성됨');">
+  출발지: <input type="text" id="from"><br>
+  도착지: <input type="text" id="to"><br>
+  <button type="submit">물류 생성</button>
 </form>
 </body></html>
