--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 
-<!DOCTYPE html><html lang="ko"><head>
-  <meta charset="UTF-8"><title>AgriNexus World</title>
-</head><body>
-<h1>🌿 AgriNexus World - 전체 기능 플랫폼</h1>
+<!DOCTYPE html><html><body>
+<h1>🌿 AgriNexus World - 전체 기능 확장</h1>
 <ul>
-  <li><a href="contract.html">계약 생성기</a></li>
-  <li><a href="report.html">보고서 생성기</a></li>
-  <li><a href="ai.html">OpenAI 생성기</a></li>
-  <li><a href="logistics.html">스마트 물류</a></li>
-  <li><a href="price.html">농산물 가격 수집</a></li>
-  <li><a href="tracking.html">실시간 추적</a></li>
-  <li><a href="notify.html">알림 시스템</a></li>
+  <li><a href="smartfarm.html">스마트팜 설계 생성기</a></li>
+  <li><a href="seeds.html">종자 추천 시스템</a></li>
+  <li><a href="firebase.html">Firebase 저장</a></li>
+  <li><a href="chart.html">실시간 시세 그래프</a></li>
 </ul>
 </body></html>
